--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Python Button Script
+            MIRPITY: SEE YOUR YEARLY MENTIONS
         </title>
         <meta name="description" content="twitter 2021 mentions recap tool">
         <meta name="keywords" content="twitter 2021 mentions recap tool">
