--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
         Because there's no way to parse through private account tweets, <br>
         this tool will only work for public accounts.<br>
         By this I mean only public accounts can get access to <br>
-        who has replied to them and only public account will <br>
+        who has replied to them and only public accounts will <br>
         appear as people who've replied to them. Sorry about that!!<br>
         <br>
         You can optionally quickly go public, run the tool,<br>
