--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
          and then go back to private tho!
         <br><br>
         <strong>If the tool is not working, come back in 15 minutes.<br>
-        It just means the tool is overloaded with request and I am to too <br>
+        It just means the tool is overloaded with requests and I am too <br>
         lazy to add something that tells you when it's overloaded 😭😭😭😭.</strong>
         <br><br>
         <em>Tool made by @themarchuerta on Twitter 😈😈😈</em>
