--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <meta name="description" content="twitter 2021 mentions recap tool">
         <meta name="keywords" content="twitter 2021 mentions recap tool">
     </head>
-    <h1 style="color:#1E90FF";>Your Twitter 2021 Mentions!</h1>
+    <h1 style="color:#1E90FF";>Your Twitter 2021 Mentions (Wrapped)!</h1>
     <h3>See who has replyed to your tweets the most over the course of this year!</h3>
     <h3>Just put your username (i.e. themarchuerta) <br>
         below in the textbox and wait for the code to run!<br>
